# zellij-tab-bar-baz

./: Cargo.toml  plugin-dev-layout.kdl
.github/workflows/: release.yml
src/: line.rs  main.rs  tab.rs  weather.rs
