[package]
name = "tab-bar-baz"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = "0.39"
zellij-tile-utils = "0.39"
anyhow = { version = "1.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind", "serde"] }
chrono-tz = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
